deploy success, updating css

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,7 @@
 .navbar {
   margin-bottom: 35px; 
   width: 100%;
-  background-color: #F0FFF0 ;
+  background-color: #126912 ;
   color: #800000 ;
   text-align: center;
 
@@ -57,7 +57,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #F0FFF0;
+  background-color: #126912;
   color: #800000;
   text-align: center;
 
