--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 
-
 .links {
   border-right: solid 2px black; 
   margin-top: 75px; 
@@ -9,13 +8,13 @@
   justify-content: left;
 
 }
+
 .navbar {
   margin-bottom: 35px; 
   width: 100%;
-  background-color: #126912 ;
+  background-color: #D3D3D3 ;
   color: #800000 ;
   text-align: center;
-
 }
 .bodyhome {
   background-image: url("./assets/lakefront2.jpg");
@@ -57,7 +56,7 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #126912;
+  background-color: #D3D3D3 ;
   color: #800000;
   text-align: center;
 
